// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CWidget02 matches custom props snapshot 1`] = `
<div
  class="card"
>
  <div
    class="card-body p-3 clearfix"
  >
    <i
      class="p-3 font-2xl mr-3 float-left someClasses"
    />
     
    <div
      class="h5 text-primary mb-0 mt-2"
    >
      header
    </div>
     
    <div
      class="text-muted text-uppercase font-weight-bold font-xs"
    >
      text
    </div>
  </div>
   
  <div
    class="card-footer px-3 py-2"
  >
    <clink
      class="font-weight-bold font-xs btn-block text-muted"
      href="link.com"
    >
      
        View More
        
      <i
        class="fa fa-angle-right float-right font-lg"
      />
    </clink>
  </div>
</div>
`;

exports[`CWidget02 matches default props snapshot 1`] = `
<div
  class="card"
>
  <div
    class="card-body p-3 clearfix"
  >
    <i
      class="p-3 font-2xl mr-3 float-left fa fa-cogs bg-primary"
    />
     
    <div
      class="h5 text-primary mb-0 mt-2"
    >
      header:string
    </div>
     
    <div
      class="text-muted text-uppercase font-weight-bold font-xs"
    >
      text:string
    </div>
  </div>
   
  <!---->
</div>
`;
